# LangChain-Practice

./: .env.example  .gitignore  README.md  app.py  frontend_main.py  hugo_agent.py  hugo_tools.py  ingestion.py  main.py  mediumblog.txt  pyproject.toml  serve.py  vectordb_main.py
backend/: core.py
docs/: README.md
